--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.ts",
+    "dev": "nodemon --quiet ./src/index.ts",
     "start": "node ./build/index.ts",
     "test": "jest",
     "build": "npx tsc"
@@ -13,7 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/crypto-js": "^4.2.1",
+    "ansi-colors": "^4.1.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "typeorm": "^0.3.17"
   },
@@ -23,6 +28,7 @@
     "@types/jest": "^29.5.10",
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
+    "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
