--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --quiet ./src/index.ts",
-    "start": "node ./build/index.js",
+    "start": "nodemon --quiet ./src/index.ts",
+    "dev": "node ./build/index.js",
     "test": "jest",
     "build": "npx tsc"
   },
