--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --quiet ./src/index.ts",
+    "start": "npx nodemon --quiet ./src/index.ts",
     "dev": "node ./build/index.js",
     "test": "jest",
     "build": "npx tsc"
