--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon --quiet ./src/index.ts",
-    "dev": "node ./build/index.js",
+    "dev": "npx nodemon --quiet ./src/index.ts",
+    "start": "node ./build/index.js",
     "test": "jest",
     "build": "npx tsc"
   },
@@ -13,12 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ansi-colors": "^4.1.3",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.2",
+    "sqlite3": "^5.1.6",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@types/ansi-colors": "^3.2.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/supertest": "^2.0.16",
@@ -27,6 +34,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.2"
   }
 }
