--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.17"
   },
@@ -28,6 +30,7 @@
     "@types/crypto-js": "^4.2.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/supertest": "^2.0.16",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
